# oneseven_tech_fastapi

./: README.md  copilot_takehome.py  copilot_test_takehome.py  prompts.txt  pyproject.toml  takehome.py  test_takehome.py
